# vscode-charteing-syntax

./: .gitignore  CHANGELOG.md  LICENSE  README.md  matchCases.toml  package-lock.json  package.json  vsc-extension-quickstart.md
.github/workflows/: publish-extension.yml
dev_scripts/: filepaths.py  main.py  parse_dict.py  poetry.toml  pyproject.toml
dev_scripts/data/: language_file_template.json
dev_scripts/scripts/: file_loaders.py  lang_file_updater.py  match_toml_housekeeping.py  validators.py
dev_scripts/src/: parse_dict.py
dev_scripts/tests/: conftest.py
dev_scripts/tests/unit/: test_file_loaders.py  test_lang_file_updater.py  test_match_toml_housekeeping.py  test_parse_dict.py  test_validators.py
dictionary/: matchCases.toml
scripts/: check_and_reorder_match_dict.py
syntaxes/: recap.tmLanguage.json
