[tool.poetry]
name = "dev-scripts"
version = "0.1.0"
description = "Scripts to update keywords and do housekeeping and testing of the extension"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "dev_scripts"}]

[tool.poetry.dependencies]
python = "^3.11"
toml = "^0.10.2"
rich = "^13.5.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
