[tool.poetry]
name = "dev-scripts"
version = "0.1.0"
description = "Provides houskeeping scripts and data adding/validation/testing for the extension"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "scripts" }]

[tool.poetry.dependencies]
python = "^3.11"
rich = "^13.5.2"
toml = "^0.10.2"
pytest = "^7.4.1"
pydantic = "^2.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.1"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
